# Windturbine

./: CMakeLists.txt  README.md  c_cpp_properties.json  main.cpp  settings.json  tasks.json  windturbine.cpp  windturbine.h  windturbine.qrc
